Cloud/Terraform/AWS/modules/vpc/main.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    instance_tenancy = "default"
    enable_dns_hostnames = true

    tags = merge (
        var.vpc_tags,
        local.common_tags
    )
}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.igw_tags,
    local.common_tags
  )
}

resource "aws_subnet" "public" {
    count = length(var.public_subnet_cidrs)
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidrs
    availability_zone = local.az_zone_names[count.index]
    map_public_ip_on_launch = true

    tags = merge(
        var.public_subnet_tags,
        local.common_tags,
        {
            Name = "${local.common_name}-public-${split("-",local.az_zone_names[count.index])[2]}"
        }
    )
}

resource "aws_subnet" "private" {
  count = length(var.private_subnet_cidrs)
  vpc_id = aws_vpc.main.id
  cidr_block = var.private_subnet_cidrs
  availability_zone = local.az_zone_names[count.index]
  map_public_ip_on_launch = false

  tags = merge (
    var.private_subnet_tags,
    local.common_tags,
    {
        Name = "${local.common_name}-private-${split("-",local.az_zone_names[count.index])[2]}"
    }
  )
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    tags = merge (
        var.public_route_table_tags,
        local.common_tags,
        {
            Name = "${local.common_name}-public"
        }
    )
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    tags = merge (
        var.private_subnet_tags,
        local.common_tags,
        {
            Name = "${local.common_name}-private"
        }
    ) 
}

resource "aws_route_table_association" "name" {
    count = length(var.public_subnet_cidrs)
    subnet_id = aws_subnet.public[count.index].id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private" {
    count = length(var.private_subnet_cidrs)
    subnet_id = aws_subnet.public[0].id
    route_table_id = aws_subnet.private.id
}

resource "aws_eip" "nat" {
    domain= "vpc"

    tags = merge (
        var.eip_tags,
        local.common_tags, {
            Name = "${local.common_name}-nat"
        }
    )
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public.id

  tags = merge(
    var.nat_gateway_tags,
    local.common_tags, {
        Name = "${local.common_name}-natgateway"
    }
  )
  depends_on = [ aws_internet_gateway.main ]
}

resource "aws_route" "public" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.main.id
}

resource "aws_route" "private" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.main.id
}
